--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,14 @@
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.nav {
+  display: flex;
+  gap: 20px;
 }
 
 .link {
@@ -26,6 +34,25 @@
   color: #fff;
   background-color: #ae1332;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  color: #ae1332;
+  font-weight: 700;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+}
+
+.icon {
+  font-size: 24px;
+  margin-right: 8px;
+}
+
+.logoText {
+  font-size: 20px;
 }
 
 @media (min-width: 768px) {
